[package]
name = "image-gallery"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
futures-util = "0.3"
bytes = "1"
dotenv = "0.15"
once_cell = "1"
mime = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"